# PET_CRM

./: .env.example  .gitignore  pyproject.toml
src/: exceptions.py  main.py
src/core/: config.py  db.py  redis.py
src/migrations/: env.py
src/migrations/versions/: 0a36ea1ca01e_add_contacts_and_deals_tables.py  23723542d4aa_add_is_admin_column_in_employee_table.py  5afd515bf452_add_table_employees.py  698f458677a7_add_closed_at_in_deal_table.py  a1f3f64b51da_add_column_hashed_password_in_employee_.py  c1158e816a24_fix_model_contact.py  c14a82cde722_fix_model_contact_telegram_id_int_str.py  daa1ada3cbe9_update_model_employee_and_contact.py
src/modules/contacts/: dependencies.py  exceptions.py  front_router.py  models.py  repositories.py  routers.py  schemas.py  services.py  utils.py
src/modules/deals/: dependencies.py  exceptions.py  front_router.py  models.py  repositories.py  routers.py  schemas.py  services.py
src/modules/employees/: dependencies.py  exceptions.py  models.py  repositories.py  routers.py  schemas.py  services.py  utils.py
src/modules/wazzup/: client.py  contacts.py  deals.py  dependencies.py  employees.py  exceptions.py  front_router.py  iframe.py  routers.py  unanswered_count.py
src/static/js/: contacts.js  deals.js
src/templates/: base.html  dashboard.html  login.html
src/templates/contacts/: contacts.html  create_form.html  list.html  partial_list.html
src/templates/deals/: deals.html
src/templates/wazzup/: wazzup.html
